# server

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json
base/: config.yaml  eqemu_config.json  login.ini  my.cnf
common/: CMakeLists.txt  additive_lagged_fibonacci_engine.h  any.h  base_data.h  base_packet.cpp  base_packet.h  bodytypes.h  chat_oplist.h  classes.cpp  classes.h  condition.cpp  condition.h  config.cpp  config.h  crash.cpp  crc16.cpp  crc16_test.cpp  crc32.cpp  crc32.h  crc32_test.cpp  data_verification.h  database.cpp  database.h  database_schema.h  db.cpp  db.h  db_result.cpp  db_result.h  db_row.cpp  db_row.h  dbcore.cpp  dbcore.h  deity.h  emu_constants.cpp  emu_constants.h  emu_limits.h  emu_opcodes.cpp  emu_opcodes.h  emu_oplist.h  emu_tcp_connection.cpp  (+147 more)
loginserver/: CMakeLists.txt  client.cpp  client.h  client_manager.cpp  client_manager.h  client_test.cpp  config.cpp  config.h  database.cpp  database.h  eq_crypto.cpp  eq_crypto.h  login_server.h  login_structures.h  main.cpp  options.h  server_manager.cpp  server_manager.h  world_server.cpp  world_server.h
queryserv/: CMakeLists.txt  database.cpp  database.h  database_test.cpp  dbupdate.cpp  main.cpp  queryservconfig.cpp  queryservconfig.h  worldserver.cpp  worldserver.h
shared_memory/: CMakeLists.txt  base_data.cpp  base_data.h  items.cpp  items.h  loot.cpp  loot.h  main.cpp  npc_faction.cpp  npc_faction.h  skill_caps.cpp  skill_caps.h  spells.cpp  spells.h
ucs/: CMakeLists.txt  chatchannel.cpp  chatchannel.h  clientlist.cpp  clientlist.h  clientlist_test.cpp  database.cpp  database.h  database_test.cpp  main.cpp  ucsconfig.cpp  ucsconfig.h  worldserver.cpp  worldserver.h
world/: CMakeLists.txt  client.cpp  client.h  cliententry.cpp  cliententry.h  clientlist.cpp  (+36 more)
(+159 files in other folders)
